--- a/Checkers/Views/MainWindow.axaml
+++ b/Checkers/Views/MainWindow.axaml
@@ -27,7 +27,7 @@
                     </ItemsControl.ItemsPanel>
 
                     <ItemsControl.ItemTemplate>
-                        <DataTemplate DataType="vm:SquareViewModel">
+                        <DataTemplate DataType="vm:Square">
                             <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                                   Margin="0">
 
