--- a/Checkers/Views/MainWindow.axaml
+++ b/Checkers/Views/MainWindow.axaml
@@ -16,7 +16,7 @@
 
     <StackPanel>
         <TextBlock FontSize="40" FontWeight="Bold" TextAlignment="Center">
-            ENGLISH DRAUGHTS
+            CHECKERS
         </TextBlock>
 
         <TextBlock Margin="0,0,0,50" TextAlignment="Center">
