--- a/Checkers/App.axaml
+++ b/Checkers/App.axaml
@@ -2,8 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="Checkers.App"
              xmlns:local="using:Checkers"
-             RequestedThemeVariant="Default">
-    <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+             RequestedThemeVariant="Light">
 
     <Application.DataTemplates>
         <local:ViewLocator />
@@ -11,5 +10,27 @@
 
     <Application.Styles>
         <FluentTheme />
+        <Style Selector="TextBlock">
+            <Setter Property="Foreground" Value="Black" />
+        </Style>
+        <Style Selector="Button">
+            <Setter Property="Background" Value="#5CA4A9" />
+            <Setter Property="Foreground" Value="Black" />
+        </Style>
+        <Style Selector="Button:pointerover">
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="RenderTransform" Value="scale(1.05)" />
+            <Setter Property="Foreground" Value="Black" />
+        </Style>
+        <Style Selector="Button:pointerover /template/ ContentPresenter">
+            <Setter Property="Background" Value="#ED6A5A" />
+        </Style>
+        <Style Selector="Button:pressed">
+            <Setter Property="Background" Value="#F4F1BB" />
+            <Setter Property="RenderTransform" Value="scale(0.98)" />
+        </Style>
+        <Style Selector="Button:pressed /template/ ContentPresenter">
+            <Setter Property="Background" Value="#F4F1BB" />
+        </Style>
     </Application.Styles>
 </Application>
