--- a/Checkers/Views/EndView.axaml
+++ b/Checkers/Views/EndView.axaml
@@ -3,61 +3,33 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:Checkers.ViewModels"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="600"
              x:Class="Checkers.Views.EndView"
              x:DataType="viewModels:EndViewModel">
 
-    <Border CornerRadius="8" Padding="20" Margin="10">
-        <Border.Background>
-            <LinearGradientBrush StartPoint="0%,0%" EndPoint="0%,100%">
-                <GradientStop Offset="0" Color="#E8F5E9" />
-                <GradientStop Offset="1" Color="#C8E6C9" />
-            </LinearGradientBrush>
-        </Border.Background>
+    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+        <TextBlock Text="{Binding Emoji}" FontSize="60" TextAlignment="Center" />
 
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock Text="🏆" FontSize="60" TextAlignment="Center" />
+        <TextBlock Text="{Binding Text}"
+                   FontSize="40"
+                   TextAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontWeight="Bold"
+                   Foreground="{Binding TextColor}"
+                   Margin="0,20" />
 
-            <TextBlock Text="{Binding Text}"
-                       FontSize="40"
-                       TextAlignment="Center"
-                       VerticalAlignment="Center"
-                       FontWeight="Bold"
-                       Foreground="#2E7D32"
-                       Margin="0,20" />
+        <StackPanel Orientation="Horizontal" Margin="0,30,0,0" HorizontalAlignment="Center">
+            <Button Content="Play Again"
+                    Command="{Binding LoadGame}"
+                    Padding="20,10"
+                    CornerRadius="4"
+                    Margin="0,0,10,0" />
 
-            <TextBlock Text="Game Statistics"
-                       FontSize="20"
-                       TextAlignment="Center"
-                       Margin="0,20,0,10" />
-
-            <!-- These would need to be bound to properties in your ViewModel -->
-            <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto,Auto" Margin="40,0">
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="Moves Made:" />
-                <TextBlock Grid.Row="0" Grid.Column="1" Text="28" HorizontalAlignment="Right" />
-
-                <TextBlock Grid.Row="1" Grid.Column="0" Text="Time Elapsed:" />
-                <TextBlock Grid.Row="1" Grid.Column="1" Text="3:24" HorizontalAlignment="Right" />
-
-                <TextBlock Grid.Row="2" Grid.Column="0" Text="Pieces Captured:" />
-                <TextBlock Grid.Row="2" Grid.Column="1" Text="10" HorizontalAlignment="Right" />
-            </Grid>
-
-            <StackPanel Orientation="Horizontal" Margin="0,30,0,0" HorizontalAlignment="Center">
-                <Button Content="Play Again"
-                        Padding="20,10"
-                        Background="#4CAF50"
-                        Foreground="White"
-                        CornerRadius="4"
-                        Margin="0,0,10,0" />
-
-                <Button Content="Main Menu"
-                        Padding="20,10"
-                        Background="#3F51B5"
-                        Foreground="White"
-                        CornerRadius="4"
-                        Margin="10,0,0,0" />
-            </StackPanel>
+            <Button Content="Main Menu"
+                    Command="{Binding LoadMainMenu}"
+                    Padding="20,10"
+                    CornerRadius="4"
+                    Margin="10,0,0,0" />
         </StackPanel>
-    </Border>
+    </StackPanel>
 </UserControl>
