--- a/Checkers/App.axaml
+++ b/Checkers/App.axaml
@@ -13,6 +13,12 @@
         <Style Selector="TextBlock">
             <Setter Property="Foreground" Value="Black" />
         </Style>
+        <Style Selector="Border.section">
+            <Setter Property="Background" Value="#F4F1BB" />
+            <Setter Property="CornerRadius" Value="4" />
+            <Setter Property="Padding" Value="10" />
+            <Setter Property="Margin" Value="10" />
+        </Style>
         <Style Selector="Button">
             <Setter Property="Background" Value="#5CA4A9" />
             <Setter Property="Foreground" Value="Black" />
