--- a/Checkers/Views/GameView.axaml
+++ b/Checkers/Views/GameView.axaml
@@ -11,12 +11,6 @@
     </Design.DataContext>
 
     <UserControl.Styles>
-        <Style Selector="Border.game-section">
-            <Setter Property="Background" Value="#F4F1BB" />
-            <Setter Property="CornerRadius" Value="4" />
-            <Setter Property="Padding" Value="10" />
-            <Setter Property="Margin" Value="10" />
-        </Style>
         <Style Selector="Button.board-square">
             <Setter Property="Background" Value="Transparent" />
             <Setter Property="Margin" Value="0" />
@@ -38,7 +32,7 @@
     </UserControl.Styles>
 
     <Grid RowDefinitions="Auto,*,Auto,Auto" Margin="0,10">
-        <Border Classes="game-section" Grid.Row="0">
+        <Border Classes="section" Grid.Row="0">
             <TextBlock Text="{Binding TurnText}" VerticalAlignment="Center" HorizontalAlignment="Center" />
         </Border>
 
@@ -71,7 +65,7 @@
             </Grid>
         </Viewbox>
 
-        <Border Classes="game-section" Grid.Row="2">
+        <Border Classes="section" Grid.Row="2">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock FontWeight="Bold">Need a Hint?</TextBlock>
