--- a/Checkers/Views/GameView.axaml
+++ b/Checkers/Views/GameView.axaml
@@ -6,9 +6,6 @@
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="800"
              x:Class="Checkers.Views.GameView"
              x:DataType="viewModels:GameViewModel">
-    <Design.DataContext>
-        <viewModels:GameViewModel />
-    </Design.DataContext>
 
     <UserControl.Styles>
         <Style Selector="Button.board-square">
@@ -65,25 +62,27 @@
             </Grid>
         </Viewbox>
 
-        <Border Classes="section" Grid.Row="2">
+        <Border Classes="section" Grid.Row="2" IsVisible="{Binding AreHintsEnabled}">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock FontWeight="Bold">Need a Hint?</TextBlock>
-                    <Button Content="Show Hint"
+                    <Button Command="{Binding GetHint}"
+                            Content="Show Hint"
                             Margin="10,0,0,0"
                             Background="#FF9800"
                             Foreground="White"
                             Padding="8,4"
                             CornerRadius="4" />
                 </StackPanel>
-                <TextBlock Text="Hint will appear here..."
+                <TextBlock Text="{Binding HintText}"
                            FontStyle="Italic"
                            Margin="0,5,0,0"
                            Foreground="#757575" />
             </StackPanel>
         </Border>
 
-        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center">
+        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="0,10,0,0"
+                    HorizontalAlignment="Center">
             <Button Content="Export Board"
                     Command="{Binding ExportBoardState}"
                     Padding="20,10"
