--- a/Checkers/Views/SettingsView.axaml
+++ b/Checkers/Views/SettingsView.axaml
@@ -6,6 +6,7 @@
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="800"
              x:Class="Checkers.Views.SettingsView"
              x:DataType="viewModels:SettingsViewModel">
+
     <UserControl.Styles>
         <Style Selector="TextBlock.heading">
             <Setter Property="FontSize" Value="24" />
@@ -20,7 +21,7 @@
         </Style>
     </UserControl.Styles>
 
-    <StackPanel>
+    <ScrollViewer>
         <StackPanel Margin="20">
             <TextBlock Classes="heading">Game Settings</TextBlock>
 
@@ -65,6 +66,16 @@
                 </StackPanel>
             </Border>
 
+            <Border Classes="section">
+                <StackPanel>
+                    <TextBlock Classes="section">Local LLM Hints</TextBlock>
+                    <CheckBox Content="Enabled"
+                              IsChecked="{Binding Data.HintsEnabled}" />
+                    <TextBox Text="{Binding Data.HintModelName}"
+                             IsVisible="{Binding Data.HintsEnabled}" />
+                </StackPanel>
+            </Border>
+
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center">
                 <Button Command="{Binding SaveSettings}"
                         Padding="20,10"
@@ -81,5 +92,5 @@
                 </Button>
             </StackPanel>
         </StackPanel>
-    </StackPanel>
+    </ScrollViewer>
 </UserControl>
